<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scrollView">
    <LinearLayout
	    style="@style/container"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="20dip"
	        android:src="@drawable/logo"
	        android:contentDescription="@string/desc_logo"/>
	    
	    <TextView 
	        android:text="@string/labelMdpLost"
	        style="@style/text"/>
	    
	    <EditText
	        android:id="@+id/mdpLost"
	        style="@style/champInput"
	        android:inputType="text"/>    
	    
	    <Button 
	        android:onClick="sendMdpLost"
	        style="@style/button"
	        android:text="@string/btnLabelMdpLost"/>
	    
	</LinearLayout>
</ScrollView>